feature: added dropdown menu and about and services section  :sparkles:

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,10 @@ img {
     height: auto;
 }
 
+ul{
+    list-style: none;
+}
+
 /* Estilização do html inteiro */
 :root {
     /* 1rem = 16px */
@@ -44,6 +48,11 @@ img {
 
 /* BASE */
 
+html{
+    /*suavizar a animação de scroll*/
+    scroll-behavior: smooth;
+}
+
 body {
     color: var(--text-color);
     background-color: var(--body-color);
@@ -53,7 +62,7 @@ body {
     -webkit-font-smoothing: antialised;
 }
 
-h1 {
+.title {
     font: 700 1.875rem "Poppins", sans-serif;
 
     color: var(--title-color);
@@ -88,12 +97,22 @@ h1 {
 
     background: linear-gradient(
         270deg, 
-        hsla(var(--hue), 36%, 57%, 1) 0%,
-        hsla(var(--hue), 65%, 88%, 0.34) 100%
+        hsla(var(--hue), 36%, 57%, 1),
+        hsla(var(--hue), 65%, 88%, 0.34)
     );
 }
 
-/* LAYOUT */
+.divider-2 {
+    height: 2px;
+
+    background: linear-gradient(
+        270deg, 
+        hsla(var(--hue), 65%, 88%, 0.34),
+        hsla(var(--hue), 36%, 57%, 1)
+    );
+}
+
+/* NAVEGAÇÃO */
 
 nav {
     height: var(--header-height);
@@ -101,10 +120,124 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
+
+nav ul li a{
+    transition: color 0.3s;
+
+    position: relative;
+}
+
+nav ul li a:hover{
+    color: var(--base-color);
+}
+
+nav ul li a::after{
+    content: '';
+
+    width: 0;
+    height: 4px;
+
+    background: var(--base-color);
+
+    position: absolute;
+    left: 0;
+    bottom: -1.5rem;
+
+    transition: width 0.2s;
+}
+
+/* criar um pseudoelemento após o a e quando estiver com o mouse sobre */
+/* esse pseudoelemento é baseado na barra que aparece ao passarmos o mouse em cima */
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+nav .menu{
+    opacity: 0;
+    visibility: hidden;
+
+    top: -20rem;
+    transition: 0.2s;
+}
+
+nav .menu ul {
+    display: none;
+}
+
+nav ul li{
+    text-align: center;
+}
+
+/*sem espaço === estilizar quando a tag possuir a classe*/
+nav.show .menu{
+    opacity: 1;
+    visibility: visible;
+
+    background: var(--body-color);
+
+    height: 100vh;
+    width: 100vw;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    display: grid;
+    place-content: center;
+}
+
+nav.show .menu ul{
+    display: grid;
+}
+
+nav.show ul.grid {
+    gap: 4rem;
+}
+
+.toggle {
+    color: var(--base-color);
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+nav .icon-close {
+    visibility: hidden;
+    opacity: 0;
+
+    position: absolute;
+    right: 1.5rem;
+    top: -1.5rem;
+
+    transition: 0.2s;
+}
+
+nav.show div.icon-close{
+    visibility: visible;
+    opacity: 1;
+
+    position: absolute;
+    right: 1.5rem;
+    top: 1.5rem;
+}
+
+/* LAYOUT */
 
 .section {
     padding: 5rem 0;
+}
+
+.section .title{
+    margin-bottom: 1rem;
+}
+
+.section header{
+    margin-bottom: 4rem;
+}
+
+.section header strong{
+    color: var(--base-color);
 }
 
 .grid {
@@ -130,6 +263,11 @@ nav {
     background-color: var(--body-color);
 }
 
+#header.scroll {
+    /*box-shadow: xoff yoff blur spred*/
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+}
+
 .logo {
     font: 700 1.31rem "Poppins", sans-serif;
     color: var(--title-color);
@@ -140,7 +278,7 @@ nav {
 }
 
 main {
-    margin-top: var(--header-height);
+    margin-top: calc(var(--header-height) + 2rem);
 }
 
 /* HOME */
@@ -199,4 +337,72 @@ main {
 
 #home .text p{
     margin-bottom: 2rem;
+}
+
+/* SOBRE */
+
+#about {
+   background: white;
+}
+
+#about .container{
+    margin: 0;
+}
+
+#about .image {
+    position: relative;
+}
+
+/* Pseudo elemento criado antes do conteúdo */
+/* Ele não é mostrado na DOM do HTML */
+#about .image::before {
+    content: '';
+
+    height: 100%;
+    width: 100%;
+    
+    background-color: var(--base-color-second);
+
+    position: absolute;
+    top: -8.3%;
+    left: -33%;
+    z-index: 0;
+}
+
+#about .image img {
+    position: relative;
+}
+
+#about .text{
+    margin: 0 1.5rem;
+}
+
+/* SERVIÇOS */
+
+.cards.grid {
+    gap: 1.5rem;
+}
+
+.card {
+    padding: 3.625rem 2rem;
+    box-shadow: 0px 0px 12px rgba(0,0,0,0.08);
+
+    border-bottom: .25rem solid var(--base-color);
+    border-radius: .25rem .25rem 0 0;
+
+    text-align: center;
+}
+
+.card i {
+    display: block;
+
+    margin-bottom: 1.5rem;
+    font-size: 5rem;
+
+    color: var(--base-color);
+}
+
+.card .title{
+    font-size: 1.5rem;
+    margin-bottom: .75rem;
 }
