--- a/src/styles.css
+++ b/src/styles.css
@@ -406,3 +406,100 @@ main {
     font-size: 1.5rem;
     margin-bottom: .75rem;
 }
+
+/* DEPOIMENTOS */
+#testimonials {
+    background: white;
+}
+
+#testimonials .container {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+#testimonials header {
+    margin-bottom: 0;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+#testimonials blockquote {
+    padding: 2rem;
+    border-radius: .25rem;
+
+    box-shadow: 0px 0px 12px rgba(0,0,0,0.08);
+}
+#testimonials blockquote p {
+    position: relative;
+
+    text-indent: 1.875rem;
+
+    margin-bottom: 1.5rem;
+
+    color: var(--title-color)
+}
+
+#testimonials blockquote p span {
+    font: 700 2.5rem serif;
+    
+    position: absolute;
+    top: -.375rem;
+    left: -1.875rem;
+
+    color: var(--base-color)
+}
+
+#testimonials cite {
+    display: flex;
+    align-items: center;
+
+    font-style: normal;
+}
+
+#testimonials cite img{
+    width: 2rem;
+    height: 2rem;
+
+    object-fit: cover;
+    clip-path: circle(); /* Criar o formato de circulo na imagem */
+
+    margin-right: .5rem;
+}
+
+/* SWIPPER */
+.swiper-slide {
+    height: auto;
+    padding: 4rem 1rem;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--base-color);
+}
+
+/* CONTATO */
+#contact .grid{
+    gap: 4rem;
+}
+
+#contact .text p{
+    margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i {
+    font-size: 1.5rem;
+    margin-right: 0.625rem;
+}
+
+#contact ul.grid {
+    gap: 2rem;
+}
+
+#contact ul li {
+    display: flex;
+    align-items: center;
+}
+
+#contact ul li i {
+    color: var(--base-color);
+}
